# AI_Nirvana

./: .coverage  .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile.bak  Dockerfile.base  README.md  SECURITY.md  TODO.md  api_key_test.py  auto_fix_code.py  check_encoding.py  check_init_errors.py  cli.py  config.json  config.json.template  config_checker.py  conftest.py  coverage.ini  coverage.xml  current_requirements.txt  debug_initialization.py  docker-compose.yml  fix_code_style.py  graph.gexf  graph.graphml  init_inspector.py  install_requirements.py  main.py  manage_dependencies_and_security.py  missing_dependencies.txt  path_to_your_config_file  profiling.py  pyproject.toml  pytest.ini  requirements-actual.txt  (+20 more)
.github/: dependabot.yml
.github/workflows/: dependency-check.yml  docker-test.yml  main.yml
.ipynb_checkpoints/: pyproject-checkpoint.toml  requirements-checkpoint.txt
.tmp.driveupload/: 59189  59197  59201  59203  59207  59211  59215  59223  59225  59229  59233  59237  59243  59247  59251  59255  59259  59263  59265  59269  59273  59275  59279  59283  59287  59291  59295  59299  59303  59307  59311
ai_nirvana/: main.py
ai_nirvana/core/: code_executor.py  context_manager.py  knowledge_base.py  language_model.py
ai_nirvana/interfaces/: api.py  cli.py  gui.py  sd_web_controller.py  voice_interface.py
ai_nirvana/plugins/: plugin_manager.py
ai_nirvana/utils/: config.py  logger.py  security.py
ai_nirvana_env/: pyvenv.cfg
ai_nirvana_env/Scripts/: activate  activate.bat
config/: default_config.yaml  pyproject.toml
data/: generation_results.txt
docker/: base.Dockerfile  dev.Dockerfile  prod.Dockerfile
docs/: ERROR_HANDLER_README.md  README.md  active_learning.md  ai_assistant.md  ai_assistant_doc.md  api_reference.md  auto_feature_engineering.md  code_executor.md  developer_guide.md  digital_twin.md  docker .md  enhanced_ai_assistant.md  examples.md  generative_ai.md  index.md  intelligent_agent.md  knowledge_base.md  langchain.md  langgraph.md  langsmith.md  language_model.md  lora.md  model_factory.md  model_interface.md  model_interpretability.md  multimodal.md  privacy_enhancement.md  quantization.md  reinforcement_learning.md  semi_supervised_learning.md  user_guide.md
examples/: AI Assistant Example.py  API Model Example.py  Cache Manager Example.py  Code Executor Example.py  Config Example.py  Dialogue Manager Example.py  Error Handler Example.py  Knowledge Base Example.py  Language Model Example.py  Local Model Example.py  Logger Example.py  Model Interface Example.py  Multimodal Interface Example.py  Plugin Manager Example.py  Reliability Example.py  Security Manager Example.py  Task Planner Example.py  UI Example.py  WildCard API Example.py  active_learning_example.py  advanced_features_demo.py  api example.py  auto_feature_engineering_example.py  cli example.py  code_executor_example.py  digital_twin_example.py  enhanced_ai_assistant_example.py  error_handler_usage_example.py  generative_ai_example.py  generic_module_example.py  gui example.py  intelligent_agent_example.py  langchain_example.py  langgraph_example.py  langsmith_example.py  lora_example.py  model_factory_example.py  model_interpretability_example.py  multimodal_example.py  optimization_example.py  (+6 more)
my_env/lib/python3.10/lib/pip-22.0.2.dist-info/: RECORD
my_env/lib/python3.10/lib/pip/_vendor/: distro.py
my_env/lib/python3.10/lib/pkg_resources/: __init__.py
my_env/lib/python3.10/lib/setuptools/: archive_util.py  build_meta.py  depends.py  dist.py  glob.py  installer.py  monkey.py  msvc.py  package_index.py  wheel.py  windows_support.py
my_env/lib/python3.10/lib/setuptools/_distutils/: __init__.py  bcppcompiler.py  config.py  log.py  (+8 more)
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat
scripts/: install_requirements.py  setup.sh
src/: api_config.py  app.py  command_data.py  commands.py  config.json  config.py  dialogue_manager.py  help_info.py  main.py  ui.py
src/core/: __init__.py  active_learning.py  ai_assistant.py  api_client.py  api_model.py  auto_feature_engineering.py  code_executor.py  digital_twin.py  enhanced_ai_assistant.py  generative_ai.py  intelligent_agent.py  knowledge_base.py  langchain.py  langgraph.py  langsmith.py  language_model.py  local_model.py  lora.py  model_factory.py  model_interface.py  model_interpretability.py  multimodal.py  openai_model.py  optimization.py  privacy_enhancement.py  quantization.py  reasoning.py  reinforcement_learning.py  reliability.py  security.py  semi_supervised_learning.py  task_planner.py  vector_store.py  wildcard_api.py
src/interfaces/: api.py  cli.py  gui.py  sd_web_controller.py  voice_interface.py
src/plugins/: plugin_manager.py  translator.py
src/tests/: test_digital_twin.py  test_generative_ai.py  test_intelligent_agent.py  test_lora.py  test_models.py  test_multimodal.py  test_privacy_enhancement.py  test_quantization.py  test_semi_supervised_learning.py
src/utils/: cache_manager.py  error_handler.py  exceptions.py  logger.py  security.py
tests/: code_execution_safety.py  complex_text_analysis.py  integration_tests.py  model_comparison.py  performance_tests.py  test.py  test_active_learning.py  test_ai_assistant.py  test_api_model.py  test_auto_feature_engineering.py  test_code_executor.py  test_digital_twin.py  test_enhanced_ai_assistant.py  test_error_handler.py  test_generative_ai.py  test_import.py  test_integration.py  test_intelligent_agent.py  test_knowledge_base.py  test_langchain.py  test_langgraph.py  test_langsmith.py  test_language_model.py  test_local_model.py  test_lora.py  test_model_factory.py  test_model_interface.py  test_model_interpretability.py  test_models.py  test_multimodal.py  test_optimization.py  test_privacy_enhancement.py  test_quantization.py  test_reinforcement_learning.py  test_reliability.py  test_security.py  test_semi_supervised_learning.py  test_task_planner.py  test_unit.py  test_wildcard_api.py
update_env/: pyvenv.cfg
update_env/Scripts/: activate  activate.bat  numba
(+164 files in other folders)
