[tool.poetry]
name = "ai-nirvana-1"
version = "0.1.0"
description = ""
authors = ["yuanjiajun <yuanjiajun999@.gmail.com>"]
readme = "README.md"
packages = [{include = "src"}] 

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
tensorflow = "^2.17.0"
absl-py = "2.1.0"
aiohttp = "3.9.5"
aiosignal = "1.3.1"
altair = "4.2.2"
annotated-types = "0.7.0"
anyio = "3.7.1"
argon2-cffi = "23.1.0"
argon2-cffi-bindings = "21.2.0"
astor = "0.8.1"
asttokens = "2.4.1"
astunparse = "1.6.3"
async-timeout = "4.0.3"
attrs = "23.2.0"
authlib = "1.3.1"
babel = "2.15.0"
base58 = "2.1.1"
beautifulsoup4 = "4.12.3"
bleach = "6.1.0"
blinker = "1.8.2"
blis = "0.7.11"
cachetools = "5.4.0"
catalogue = "2.0.10"
certifi = "2024.7.4"
cffi = "1.16.0"
charset-normalizer = "3.3.2"
chex = "0.1.7"
click = "8.1.7"
cloudpathlib = "0.18.1"
cloudpickle = "3.0.0"
colorama = "0.4.6"
comm = "0.2.2"
confection = "0.1.5"
contourpy = "1.2.1"
cryptography = "42.0.8"
cycler = "0.12.1"
cymem = "2.0.8"
dataclasses-json = "0.6.7"
debugpy = "1.8.2"
decorator = "5.1.1"
defusedxml = "0.7.1"
differential-privacy = "0.1.0"
distro = "1.9.0"
dm-tree = "0.1.8"
dnspython = "2.6.1"
email-validator = "2.2.0"
entrypoints = "0.4"
etils = "1.5.2"
eli5 = "0.13.0"
exceptiongroup = "1.2.2"
executing = "2.0.1"
fastapi = "0.111.1"
fastapi-cli = "0.0.4"
fastjsonschema = "2.20.0"
faiss-cpu = "^1.7.0"
featuretools = "1.31.0"
filelock = "3.12.4"
flask = "2.2.5"
flatbuffers = "24.3.25"
flax = "0.8.4"
fonttools = "4.53.1"
frozenlist = "1.4.1"
fsspec = "2024.6.1"
gast = "0.6.0"
gensim = "4.3.2"
gitdb = "4.0.11"
gitpython = "3.1.43"
google-auth = "2.32.0"
google-auth-oauthlib = "1.2.1"
google-pasta = "0.2.0"
greenlet = "3.0.3"
grpcio = "1.65.1"
h11 = "0.14.0"
h5py = "3.11.0"
holidays = "0.53"
httpcore = "1.0.5"
httptools = "0.6.1"
httpx = "0.27.0"
huggingface-hub = "0.24.0"
idna = "3.7"
importlib-metadata = "8.0.0"
importlib-resources = "6.4.0"
iniconfig = "2.0.0"
intel-openmp = "2021.4.0"
ipykernel = "6.29.5"
ipython = "8.18.1"
ipython-genutils = "0.2.0"
ipywidgets = "8.1.3"
itsdangerous = "2.2.0"
jax = "0.4.30"
jaxlib = "0.4.30"
jedi = "0.19.1"
jinja2 = "3.1.4"
joblib = "1.4.2"
json5 = "0.9.25"
jsonpatch = "1.33"
jsonpointer = "3.0.0"
jsonschema = "4.23.0"
jsonschema-specifications = "2023.12.1"
jupyter = "1.0.0"
jupyter-console = "6.6.3"
jupyter-packaging = "0.7.12"
jupyter-server = "1.24.0"
jupyter-client = "7.4.9"
jupyter-core = "5.7.2"
jupyterlab = "3.0.12"
jupyterlab-pygments = "0.3.0"
jupyterlab-server = "2.16.3"
jupyterlab-widgets = "3.0.11"
keras = "3.4.1"
kiwisolver = "1.4.5"
langchain = "^0.2.13"
langchain-community = "^0.2.12"
langchain-core = "^0.2.30"
langchain-openai = "0.1.17"
langchain-text-splitters = "0.2.2"
langcodes = "3.4.0"
langsmith = "0.1.92"
language-data = "1.2.0"
libclang = "18.1.1"
llvmlite = "0.43.0"
marisa-trie = "1.2.0"
markdown = "3.6"
markdown-it-py = "3.0.0"
markupsafe = "2.1.5"
marshmallow = "3.21.3"
matplotlib-inline = "0.1.7"
mdurl = "0.1.2"
mkl = "2021.4.0"
ml-dtypes = "0.4.0"
mpmath = "1.3.0"
msgpack = "1.0.8"
multidict = "6.0.5"
murmurhash = "1.0.10"
mypy-extensions = "1.0.0"
namex = "0.0.8"
nbclassic = "0.5.6"
nbclient = "0.10.0"
nbconvert = "7.16.4"
nbformat = "5.10.4"
nest-asyncio = "1.6.0"
networkx = "3.2.1"
nltk = "3.8.1"
notebook = "6.5.7"
notebook-shim = "0.2.4"
numba = "0.60.0"
numpy = "1.26.4"
oauthlib = "3.2.2"
openai = "^1.40.6"
opencv-python = "4.8.0.76"
opt-einsum = "3.3.0"
optax = "0.2.1"
optree = "0.12.1"
orbax-checkpoint = "0.4.4"
orjson = "3.10.6"
package-name = "0.1"
packaging = "24.1"
pandas = "2.2.2"
pandocfilters = "1.5.1"
parso = "0.8.4"
pillow = "9.4.0"
platformdirs = "4.2.2"
preshed = "3.0.9"
prometheus-client = "0.20.0"
prompt-toolkit = "3.0.47"
protobuf = "4.25.3"
psutil = "6.0.0"
pure-eval = "0.2.2"
pyasn1 = "0.6.0"
pyasn1-modules = "0.4.0"
pycparser = "2.22"
pydantic = "2.8.2"
pydantic-core = "2.20.1"
pydeck = "0.9.1"
pygments = "2.18.0"
pyparsing = "3.1.2"
python-dateutil = "2.9.0.post0"
python-dotenv = "0.19.1"
python-multipart = "0.0.7"
pytz = "2024.1"
pywinpty = { version = "2.0.13", markers = "sys_platform == 'win32'" }
pyyaml = "6.0.1"
pyzmq = "26.0.3"
qtconsole = "5.5.2"
qtpy = "2.4.1"
referencing = "0.35.1"
regex = "2024.5.15"
requests = "2.32.3"
requests-oauthlib = "2.0.0"
rich = "13.7.1"
rpds-py = "0.19.0"
rsa = "4.9"
ruamel-yaml = "0.18.6"
ruamel-yaml-clib = "0.2.8"
safetensors = "0.4.3"
scikit-learn = "1.2.2"
scipy = "1.13.1"
seaborn = "0.13.2"
send2trash = "1.8.3"
shap = "0.46.0"
shellingham = "1.5.4"
six = "1.16.0"
slicer = "0.0.8"
smart-open = "7.0.4"
smmap = "5.0.1"
sniffio = "1.3.1"
soupsieve = "2.5"
spacy = "3.7.5"
spacy-legacy = "3.0.12"
spacy-loggers = "1.0.5"
speechrecognition = "3.10.1"
sqlalchemy = "2.0.31"
srsly = "2.4.8"
stack-data = "0.6.3"
starlette = "0.37.2"
streamlit = "0.80.0"
sympy = "1.13.0"
tbb = "2021.13.0"
tenacity = "8.5.0"
tensorboard = "2.17.0"
tensorboard-data-server = "0.7.2"
tensorflow-estimator = "2.15.0"
tensorstore = "0.1.45"
tensorflow-io-gcs-filesystem = "0.31.0"
termcolor = "2.4.0"
terminado = "0.18.1"
tf-keras = "^2.12.0"
thinc = "8.2.5"
threadpoolctl = "3.5.0"
tiktoken = "0.7.0"
tinycss2 = "1.3.0"
tokenizers = "0.19.1"
toml = "0.10.2"
toolz = "0.12.1"
tornado = "6.4.1"
tqdm = "4.66.4"
traitlets = "5.14.3"
transformers = "4.41.2"
torch = "2.3.1"
torchvision = "0.18.1"
arrow = "^1.3.0"
async-lru = "^2.0.4"
bounded-pool-executor = "^0.0.3"
cachecontrol = "^0.14.0"
chardet = "^5.2.0"
colour = "^0.1.5"
comtypes = "^1.4.6"
cssselect = "^1.2.0"
cssutils = "^2.11.1"
dash = "^2.17.1"
dash-core-components = "^2.0.0"
dash-html-components = "^2.0.0"
dash-table = "^5.0.0"
dash-cytoscape = "^1.0.2"
dill = "^0.3.8"
dtreeviz = "^2.2.2"
fqdn = "^1.5.1"
gevent = "^24.2.1"
graphviz = "^0.20.3"
gym = "^0.26.2"
py-googletrans = "1.2"
h2 = "^4.1.0"
hpack = "^4.0.0"
hstspreload = "^2024.8.1"
html5lib = "^1.1"
hyperframe = "^6.0.1"
imageio = "^2.34.2"
imagesize = "^1.4.1"
interpret = "^0.6.3"
interpret-core = "^0.6.3"
isoduration = "^20.11.0"
jupyter-events = "^0.10.0"
jupyter-lsp = "^2.2.5"
jupyter-server-terminals = "^0.5.3"
langdetect = "1.0.9"
lazy-loader = "^0.4"
license-expression = "^30.3.0"
lime = "^0.2.0.1"
lxml = "^5.2.2"
mistune = "^3.0.2"
multiprocess = "^0.70.16"
overrides = "^7.7.0"
packageurl-python = "^0.15.6"
pdpbox = "^0.3.0"
pip-api = "^0.0.34"
pip-requirements-parser = "^32.0.1"
pip-audit = "^2.7.3"
pqdm = "^0.2.0"
premailer = "^3.10.0"
py = "^1.11.0"
py-serializable = "^1.1.0"
pyarrow = "^17.0.0"
pyglet = "^2.0.17"
pyttsx3 = "^2.90"
retrying = "^1.3.4"
rfc3339-validator = "^0.1.4"
rfc3986 = "^2.0.0"
rfc3986-validator = "^0.1.1"
salib = "^1.5.0"
scikit-image = "^0.24.0"
sentencepiece = "^0.2.0"
sortedcontainers = "^2.4.0"
tabulate = "^0.9.0"
tifffile = "^2024.7.24"
types-python-dateutil = "^2.9.0.20240316"
tzlocal = "^5.2"
ujson = "^5.10.0"
uri-template = "^1.3.0"
validators = "^0.33.0"
wasabi = "^1.1.3"
watchdog = "^4.0.1"
watchfiles = "^0.23.0"
weasel = "^0.4.1"
webcolors = "24.6.0"
woodwork = "0.31.0"
xgboost = "2.1.0"
yagmail = "0.15.293"
webencodings = "0.5.1"
websocket-client = "1.8.0"
websockets = "12.0"
werkzeug = "3.0.3"
widgetsnbextension = "4.0.11"
wrapt = "1.14.1"
yarl = "1.9.4"
zipp = "3.19.2"
zope-event = "5.0"
zope-interface = "6.4.post2"
gym-notices = "0.0.8"
deep-translator = "1.9.1"
chromadb = "^0.5.5"
sentence-transformers = "^3.0.1"
python-decouple = "^3.8"
retry = "^0.9.2"
textblob = "^0.18.0.post0"
schedule = "^1.2.2"
fuzzywuzzy = "^0.18.0"
redis = "^5.0.8"


[tool.poetry.group.dev.dependencies]
build = "1.2.1"
black = "24.4.2"
pip-tools = "7.4.1"
pluggy = "1.5.0"
pyproject-hooks = "1.1.0"
pytest = "^6.2"
pywin32 = { version = "306", markers = "sys_platform == 'win32'" }
tomli = ">=2"
alabaster = ">=0.7.14,<0.8.0"
autopep8 = "^2.3.1"
boolean-py = "^4.0"
cfgv = "^3.4.0"
coverage = "^5.5"
cyclonedx-python-lib = "^7.5.1"
distlib = "^0.3.8"
docutils = "<0.20"
flake8 = "^7.1.1"
git-filter-repo = "^2.45.0"
identify = "^2.6.0"
isort = "5.10.1"
mccabe = "^0.7.0"
nodeenv = "^1.9.1"
sphinx = "<6.0.0"
numpydoc = "<1.7.0"
pre-commit = "^3.8.0"
pycodestyle = "^2.12.1"
pyflakes = "^3.1.0"
pytest-cov = "^5.0.0"
safety = "3.2.4"
safety-schemas = "0.0.2"
snowballstemmer = "^2.2.0"
sphinx-rtd-theme = "^2.0.0"
sphinxcontrib-applehelp = "^2.0.0"
sphinxcontrib-devhelp = "^2.0.0"
sphinxcontrib-htmlhelp = "^2.1.0"
sphinxcontrib-jquery = "^4.1"
sphinxcontrib-jsmath = "^1.0.1"
sphinxcontrib-qthelp = "^2.0.0"
sphinxcontrib-serializinghtml = "^2.0.0"
virtualenv = "^20.26.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]